# Consultify

./: README.md  pyproject.toml  samconfig.toml  template.yaml
consultify_tg_bot/: main.py
hello_world/: app.py  requirements.txt
