[tool.poetry]
name = "consultify"
version = "0.1.0"
description = ""
authors = ["Bohdan Solianyk <bohdan_solianyk@epam.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.35.3"
boto3 = "^1.34.131"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
